--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,9 @@
 @tailwind utilities;
 
 #__next {
-  min-height: 200vh;
   display: flex;
   flex-direction: column;
-  @apply bg-earth-50 dark:bg-night;
+  @apply bg-earth-50 dark:bg-cinder-900;
 }
 html {
   @apply scroll-smooth !important;
