added sanity and embedded with nextjs. added two example blog posts and added latest blog post section on home page, fixed some issues on darkmodetoogle, fixed some colors on headers, added preview mode to sanity

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 #__next {
   display: flex;
   flex-direction: column;
-  @apply overflow-hidden bg-earth-50 dark:bg-cinder-900;
+  @apply overflow-hidden bg-earth-50 transition-colors duration-500 dark:bg-cinder-900;
 }
 html {
   @apply scroll-smooth !important;
